Changed all controller methods to return standard response.